examples/good/06-01-functions-decl.dog
int funInt(int x) {
    return x;
}

string funStr(string x) {
    return x;
}

boolean funBool(boolean x) {
    return x;
}

yeet funInt(2137);
yeet funStr("2137");
yeet funBool(true);