examples/bad/05-05-if-else-types-mismatch.dog
int cond() {
    return 1337;
}

if (cond()) {
    yeet "oops";
} else {
    yeet "oops";
}